# BNL

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  DEPENDENCIES.md  HARDWARE_VERIFICATION_REPORT.md  INSTALL.md  LIDAR_SETUP_GUIDE.md  NAV2_AUDIT.json  NAV2_AUDIT.md  ONLINE_SLAM_README.md  ONLINE_SLAM_VALIDATION.md  README.md  README_AUTONOMOUS.md  bno085_simple.py  bno085_test.py  check_topics.sh  encoder_test.py  encoder_test_fast.py  encoder_test_interrupt.py  explore.py  gpio_diagnostic.py  imu_test_direct.py  lidar_diagnostic.py  lidar_test.py  motor_test_direct.py  quick_lidar_test.py  random_move.py  servo_smooth.py  setup_instructions.md  test_servo.py
agent-output/: PRELIMINARY_REPORT.md  change_log.md  cleanup_plan.md  cleanup_summary.md  critique_report.md  discovery_report.md  file_classification.md  final_report.md  phase0_plan.md  plan.md  reality_check.md  refactor_plan.md  refactor_validation.md  report.txt  verification_report.md
agent-output/logs/: CRITICAL_FINDINGS.txt
agent-output/patches/: real_mode_nav2.patch  slam_params.diff
config/: hardware.yaml
docker_image/: Dockerfile  docker_python_venv.bash  ros_entrypoint.sh
install/: local_setup.sh  setup.sh
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/: local_setup.sh  package.ps1  package.sh
install/simulation_package/share/simulation_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wg_bringup/share/wg_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wg_bringup/share/wg_bringup/launch/: wg.launch.py
install/wg_control_center/share/wg_control_center/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wg_interface/share/wg_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wg_picamera/share/wg_picamera/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wg_sensor_pullup/share/wg_sensor_pullup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wg_utilities/share/wg_utilities/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wg_yolo_package/share/wg_yolo_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
scripts/: build.sh  run_autonomy.sh  run_sim.sh
sim/models/: full_robot.urdf
sim/worlds/: robot_world.sdf
src/bnl_autonomy/: package.xml  setup.cfg  setup.py
src/bnl_autonomy/bnl_autonomy/: banana_approach_node.py  cmd_vel_mux_node.py  frontier_explorer_node.py  task_executive_node.py  util.py
src/bnl_autonomy/config/: autonomy_params.yaml  nav2_params.yaml
src/bnl_autonomy/launch/: autonomy.launch.py  master.launch.py
src/bnl_autonomy/resource/: bnl_autonomy
src/bnl_bringup/: README.md  package.xml  setup.cfg  setup.py
src/bnl_bringup/config/: rviz_sensors.rviz
src/bnl_bringup/launch/: bnl_layer1_sim.launch.py  sim.launch.py
src/bnl_msgs/: CMakeLists.txt  package.xml
src/bnl_msgs/msg/: SemanticObservation.msg  SemanticXY.msg
src/bnl_msgs/srv/: DetectBanana.srv
src/bnl_navigation/: README.md  package.xml  setup.cfg  setup.py
src/bnl_navigation/bnl_navigation/: explore_random_goals.py
src/bnl_navigation/config/: nav2_params_mapping.yaml  rviz_nav2_slam.rviz
src/bnl_navigation/launch/: bnl_layer3_nav2.launch.py
src/bnl_perception/: CMakeLists.txt  README.md  package.xml  poll_detect_banana.py  semantic_observation_node.py
src/bnl_perception/config/: detection_filter.yaml
src/bnl_projection/: CMakeLists.txt  README.md  package.xml  semantic_observation_stub_publisher.py  semantic_projection_node.py  semantic_xy_marker_node.py
src/bnl_sim/: CMakeLists.txt  package.xml
src/bnl_slam/: README.md  SLAM_TOOLBOX_WALKTHROUGH.md  package.xml  setup.cfg  setup.py
src/bnl_slam/config/: rviz_slam_map.rviz  slam_toolbox_async.yaml
src/bnl_slam/launch/: bnl_layer2_slam.launch.py  bnl_slam_layer2.launch.py
src/robot_localization/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc2.yaml
src/robot_localization/doc/: conf.py  index.rst  integrating_gps.rst  lifecycle_support.rst  navsat_transform_node.rst  state_estimation_nodes.rst
src/robot_localization/include/robot_localization/: navsat_transform.hpp  ros_filter.hpp
src/robot_localization/launch/: ekf.launch.py  full_localization.launch.py  nav2_launch.py  ukf.launch.py
src/robot_localization/params/: navsat_transform.yaml  ukf.yaml
src/robot_localization/src/: ekf_node.cpp  navsat_transform.cpp  ros_filter.cpp  ros_robot_localization_listener.cpp  ukf_node.cpp
src/robot_localization/src/elias_arbeid/: __init__.py
src/robot_localization/test/: test_earth_chain.cpp  test_ekf.cpp  test_filter_base_diagnostics_timestamps.launch.py  test_navsat_conversions.cpp  test_se_node_interfaces.cpp  test_se_node_interfaces.launch.py  test_ukf.cpp
src/ros2_packages/: COLCON_IGNORE
src/sim_folder/src/bnl_autonomy_bringup_pkg/: README.md  package.xml  setup.cfg  setup.py
src/sim_folder/src/bnl_autonomy_bringup_pkg/launch/: bnl_full_autonomy.launch.py
src/wg_bringup/: bnl_startup.sh  setup.py
src/wg_bringup/launch/: wg.launch.py
src/wg_bringup/wg_bringup/: __init__.py  scan_projection.py  servo_oscillator.py
src/wg_control_center/: setup.py
src/wg_control_center/control_center/: control_code.py  servo_control.py  twist_mux.yaml
src/wg_interface/: CMakeLists.txt
src/wg_picamera/: camera_wrapper.sh  setup.py
src/wg_picamera/wg_picamera/: camera_interface.py
src/wg_sensor_pullup/: setup.py
src/wg_sensor_pullup/IMU/: IMU_code.py  imuodom.py
src/wg_sensor_pullup/elias_relay/: README.md  __init__.py  lidar_relay.py  measurements.yaml  vel_to_pmw.py  wheelodom.py
src/wg_utilities/: setup.py
src/wg_utilities/nav2/: nav2_param.yaml  slam_params.yaml  static_tf.urdf
src/wg_utilities/nav2/maps/: default_map.pgm  default_map.yaml
src/wg_yolo_package/ros_yolo_node/: ros_yolo_code.py
(+93 files in other folders)
