<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bnl_bringup</name>
  <version>0.0.1</version>
  <description>BNL deterministic bringup for simulation + sensors + TF (Layer 1).</description>

  <maintainer email="user@example.com">BNL</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>bnl_sim</exec_depend>
  <exec_depend>bnl_slam</exec_depend>
  <exec_depend>bnl_navigation</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
