<?xml version="1.0"?>
<package format="3">
  <name>bnl_sim</name>
  <version>0.0.1</version>
  <description>BNL simulation assets (Gazebo worlds and models).</description>

  <maintainer email="user@example.com">BNL</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
